--- a/src/App.css
+++ b/src/App.css
@@ -24,27 +24,45 @@ body {
   height: 8px;
 }
 
-.done-by {
+.CoverPage {
   padding: 10px 5px;
 }
-
-.done-by-title {
+.CoverPage-logo{
+  width: 300px;
+  height: 70px;
+}
+.CoverPage-title {
   font-size: 30px;
   font-family: Poppins;
   font-weight: 500;
   color: lightblue;
+  margin-left: 70%;
+ 
+}
+.CoverPage-doneBy-title {
+  font-size: 30px;
+  font-family: Poppins;
+  font-weight: 500;
+  color: lightblue;
+  margin-left: 70%;
 }
 
-.done-by-list {
+.CoverPage-list{
   padding: 10px 5px;
+  margin-left: 70%;
 }
 
 .done-by-list p {
   font-family: Roboto;
   font-size: 20px;
   margin: 10px 0px;
+  margin-left: 70%;
 }
-
+.lama{
+  color: crimson;
+  margin-left: 71%;
+  font-size: 17px;
+}
 .hiba {
   color: lightcoral;
 }
@@ -96,29 +114,6 @@ body {
   color: whitesmoke;
 }
 
-.goals {
-  padding: 10px 5px;
-}
-
-.goals-title {
-  font-size: 30px;
-  font-family: Poppins;
-  font-weight: 500;
-  color: lightblue;
-}
-
-.goals-list {
-  list-style-type: square;
-  color: lightcyan;
-  font-size: 20px;
-  font-family: Roboto;
-  padding: 10px 35px;
-}
-
-.goals-list li {
-  margin: 10px 0px;
-}
-
 .specifications {
   padding: 10px 5px;
 }
@@ -137,22 +132,24 @@ body {
   padding: 10px 5px;
   color: whitesmoke;
 }
-
-.milestones {
-  padding: 10px 5px;
-}
-
-.milestones-title {
-  font-size: 30px;
+.specifications-ProjectLink{
+  font-size: 20px;
   font-family: Poppins;
-  font-weight: 500;
+  font-weight: 100;
   color: lightblue;
 }
+.All {
+  display: table-row;
+}
 
-.milestones-desc {
-  font-size: 18px;
-  font-weight: 500;
-  font-family: Roboto;
-  padding: 10px 5px;
-  color: whitesmoke;
+.Fraction {
+    display: table-cell;
+    text-align: center;    
+}
+.Denominator{
+    border-top: 1px solid rgb(255, 255, 255);
+    display: block;
+}
+.Fraction, .Numerator, .Denominator {
+    padding: 0px 5px;    
 }
